frontend/src/fintrack/pages/tracker/styles/tracker-style.css
/* frontend\src\pages\tracker\styles\tracker-style.css */
/*---------------------*/
/*possible conflict w displayScreen*/
.displayScreen.light {
  border-radius: 0.75rem;
  /* width: 85%; */
  width: 100%;
  background-color: var(--creme);
  padding: 0.5em 0.75em;
  border: none;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* hay conflicto con .displayScreen--concept/result*/
/*probar usando module.css*/
.displayScreen--concept.dark,
.displayScreen--result.dark {
  font-size: 0.875rem;
  font-weight: 600;
  letter-spacing: 1px;
  text-align: left;
  color: var(--dark);
  /* border: 5px solid red; */
}

.displayScreen--result {
  color: var(--dark);
  font-weight: 700;
  align-items: center;
  /* border: 1px solid red; */
}

/*---------------*/
/*trackerNavbar*/
.trackerNavbar__container,
.total__container {
  display: flex;
  justify-content: space-between;
  align-items: center;

  border-radius: 1rem 1rem 0 0 !important;
  /*width: 80%;*/ /*original figma*/
  width: 88%; /*changed*/

  margin: 0 auto;
  align-self: center;
  background-color: #1b1b1b;
  gap: 0.15rem;

  /*contolled over position*/
  /* ajustar el factor 0.2 para lograr el offset visual deseado. Prueba con 0.2 (20% de la altura del navbar) y luego ajusta. */

  left: 50%;
  transform: translateX(-50%);
  z-index: 0;
  height: var(--navbar-top-height);
  padding: 0.75rem;

  background-color: #252525;
}

.trackerNavbar__container,
.total__container {
  position: absolute;
  /*figma*/
  /* top: 20%; */
  /*Position fixed based on topSpaceHeight height + 16% */
  /* top: calc(var(--topSpaceHeight) * 1 + 16%); */
  /*Variable position based on header total height + gap*/
  top: calc(var(--header-total-height) + var(--gap-between));
}
/* =============================== */
/*----CARD SEPARATOR COMPONENT-----*/
/* =============================== */
.separator__container {
  width: 100%;
  position: absolute;
  left: 0%;
  top: 50%;
  transform: translateY(-40%);
  background-color: transparent;
}

.stack__sep {
  display: flex;
  justify-content: start;
  background-color: transparent;
  /* border: 10px solid yellow; */
}

.circleL,
.circleR {
  --radio: 1.15rem;
  height: var(--radio);
  width: calc(var(--radio) * 0.65);

  border-top-right-radius: var(--radio);
  border-bottom-right-radius: var(--radio);
  background-color: var(--bgBodyColor);
}
.circleR {
  border-radius: var(--radio) 0 0 var(--radio);
}

.bar {
  border-bottom: 2px dashed var(--creme);

  transform: translateY(-45%);
  width: 100%;

  border-radius: var(--radio);
}
/*---------------------*/
section {
  border: none;
}
article {
  border: none;
}

/* ============================= */
/*---TRACKER CARD PRESENTATION---*/
/* ============================= */

.cards__presentation--tracker {
  width: 88%;
  margin: 0 auto;
  border-radius: 1rem;
  padding: 1rem 1.625rem;

  background: url('../../../../assets/cardBgTexture.png') repeat;

  /*figma*/
  left: 50%;
  transform: translateX(-50%);
  position: absolute;

  /* border: 5px solid orange; */
}

.cards__presentation--tracker {
  /* [MODIFIED] Position based on header + navbar + two gaps */
  top: calc(
    var(--header-total-height) + var(--navbar-top-height) +
      (var(--gap-between) * 2)
  );

  /* SCROLL */
  overflow-y: auto;
  overflow-x: hidden;
  scroll-behavior: smooth;
  padding-right: 0.5rem;

  /* max-height: calc(100dvh - var(--header-height) - var(--navbar-top-height) - var(--navbar-bottom-height) - 1rem); */

  /* padding-right: 0.5rem; */
  /* padding-bottom: calc(var(--navbar-bottom-height) + 1rem); */
}

/* .cards__presentation--tracker form > :last-child {
  margin-bottom: calc(var(--navbar-bottom-height)*1 + 0.5rem);
} */

.state__card--top,
.state__card--bottom {
  border: 0px solid rgb(35, 56, 3);
}

.card--title {
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 600;
  padding: 0.5rem 0;
  color: var(--dark);
}

/***********/
.account.card--title {
  /* background-color: orange; */
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  gap: 0.5rem;
  width: 100%;
}
/***********/
.card--title--top {
  padding: 2rem 0 0.5rem 0;
}

.card__screen {
  background-color: var(--creme);
  border-radius: 0.75rem;
  padding: 0.5rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--dark);

  height: 100%;
}

.inputNumber {
  font-size: 1.5rem;
  line-height: 2em;
  font-weight: 700;
  width: 90%;
  padding-right: 0.5rem;
  text-align: right;
  background-color: transparent;
  color: var(--dark);
}

.inputNumber::placeholder {
  color: var(--secondary, gray);
  font-weight: 200;
  font-size: 1.5rem;
  text-align: center;
  padding-left: 12%;
}

/*------------------------*/
.icon--arrow {
  width: fit-content;
}

/*-----CardNote---------------*/
.input__note__description {
  font-size: 0.875rem;
  line-height: 1.2em;
  letter-spacing: 1px;
  font-weight: 600;
  max-width: 100%;
  text-align: left;
  background-color: transparent;
  color: var(--dark);
  width: 100%;
  border: none;
  outline: none;
  resize: vertical;
  transition: max-height 0.2s ease;
}

textarea:invalid {
  border: 1px dashed tomato;
}

.input__note__description::placeholder {
  color: var(--dark);
  font-weight: 600;
}
/*--------------*/
/*-- bottom card for investment and debts--*/
.card__typeDate__container {
  display: flex;
  align-items: start;
  width: 100%;
  justify-content: space-between;
  /* border:1px solid orange; */
}

.card__typeDate--type,
.card__typeDate--date,
.card__typeDate--element {
  display: flex;
  flex-direction: column;
  align-items: start;
  width: 50%;
  padding: 1.51rem 0 0rem 0;

  /* border:1px solid red; */
}

.card__typeDate--type {
  width: 40%;
}

.card__screen--type {
  border: 2px solid var(--dark);
  padding: 0.58rem 0;
  border-radius: 0.75rem;
  width: 100%;
  cursor: pointer;
  /* border:1px solid red; */
}
/* ... */

